--- a/Example/Resources/Base.lproj/Main.storyboard
+++ b/Example/Resources/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="k4K-JY-aCE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="k4K-JY-aCE">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -27,62 +27,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="51" translatesAutoresizingMaskIntoConstraints="NO" id="LaN-h4-wtu">
-                                <rect key="frame" x="0.0" y="132" width="414" height="175"/>
+                                <rect key="frame" x="55" y="99" width="304" height="175"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9sY-DS-z63">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="64"/>
-                                        <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cgY-5Q-3HF">
-                                                <rect key="frame" x="20" y="20" width="374" height="34"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Identifier" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I5r-s7-pdy">
-                                                <rect key="frame" x="30" y="2.5" width="53" height="14.5"/>
-                                                <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="12"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2vI-Kz-ZBa">
-                                                <rect key="frame" x="300" y="-6" width="94" height="23"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="23" id="9aG-Ax-cYS"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="12"/>
-                                                <state key="normal" title="Sample identifier"/>
-                                                <connections>
-                                                    <action selector="defaultIdentifierAction" destination="BYZ-38-t0r" eventType="touchUpInside" id="HK5-tn-1X8"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="cgY-5Q-3HF" secondAttribute="trailing" constant="20" id="5vM-uV-hbL"/>
-                                            <constraint firstItem="cgY-5Q-3HF" firstAttribute="leading" secondItem="9sY-DS-z63" secondAttribute="leading" constant="20" id="Nwy-eS-N5t"/>
-                                            <constraint firstItem="2vI-Kz-ZBa" firstAttribute="trailing" secondItem="cgY-5Q-3HF" secondAttribute="trailing" id="Pow-PX-8Yl"/>
-                                            <constraint firstItem="2vI-Kz-ZBa" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="I5r-s7-pdy" secondAttribute="trailing" constant="5" id="RzM-Mn-icT"/>
-                                            <constraint firstItem="cgY-5Q-3HF" firstAttribute="centerY" secondItem="9sY-DS-z63" secondAttribute="centerY" constant="5" id="a0k-Xb-zMJ"/>
-                                            <constraint firstItem="cgY-5Q-3HF" firstAttribute="top" secondItem="I5r-s7-pdy" secondAttribute="bottom" constant="3" id="kLG-od-7IS"/>
-                                            <constraint firstItem="cgY-5Q-3HF" firstAttribute="top" secondItem="2vI-Kz-ZBa" secondAttribute="bottom" constant="3" id="rP9-z1-BUV"/>
-                                            <constraint firstItem="I5r-s7-pdy" firstAttribute="leading" secondItem="cgY-5Q-3HF" secondAttribute="leading" constant="10" id="tmx-rS-7it"/>
-                                            <constraint firstAttribute="height" constant="64" id="xap-Eq-I3A"/>
-                                        </constraints>
-                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pLK-Zn-xZa">
-                                        <rect key="frame" x="0.0" y="115" width="414" height="60"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="cookie" translatesAutoresizingMaskIntoConstraints="NO" id="1SA-0i-fZc">
-                                                <rect key="frame" x="10" y="-5" width="394" height="9"/>
-                                            </imageView>
-                                        </subviews>
+                                        <rect key="frame" x="0.0" y="0.0" width="304" height="0.0"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstItem="1SA-0i-fZc" firstAttribute="leading" secondItem="pLK-Zn-xZa" secondAttribute="leading" constant="10" id="bqn-Qt-Byh"/>
-                                            <constraint firstAttribute="trailing" secondItem="1SA-0i-fZc" secondAttribute="trailing" constant="10" id="ti6-32-ifG"/>
-                                        </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqR-Ij-EXf">
-                                        <rect key="frame" x="207" y="87" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="51" width="304" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="jE4-8J-FDX"/>
                                         </constraints>
@@ -92,6 +44,9 @@
                                             <action selector="openInAppBrowser" destination="BYZ-38-t0r" eventType="touchUpInside" id="MBk-P9-0VI"/>
                                         </connections>
                                     </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cookie" translatesAutoresizingMaskIntoConstraints="NO" id="1SA-0i-fZc">
+                                        <rect key="frame" x="0.0" y="127" width="304" height="48"/>
+                                    </imageView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="iCv-6d-cQP"/>
@@ -101,9 +56,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LaN-h4-wtu" secondAttribute="trailing" id="8Ln-k4-PfS"/>
-                            <constraint firstItem="LaN-h4-wtu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="XXq-NZ-kcc"/>
-                            <constraint firstItem="LaN-h4-wtu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ehQ-be-8NL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LaN-h4-wtu" secondAttribute="trailing" constant="55" id="8Ln-k4-PfS"/>
+                            <constraint firstItem="LaN-h4-wtu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="55" id="XXq-NZ-kcc"/>
+                            <constraint firstItem="LaN-h4-wtu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="ehQ-be-8NL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Bq0-aF-Ck4">
@@ -121,7 +76,6 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="identifierTextField" destination="cgY-5Q-3HF" id="bQ0-hd-mjy"/>
                         <outlet property="showPrivacyCenterButton" destination="aTw-e0-xLI" id="rQy-az-wAB"/>
                     </connections>
                 </viewController>
@@ -134,11 +88,11 @@
             <objects>
                 <viewController id="mXx-hw-eV0" customClass="SavedDataViewController" customModule="MobileConsent" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="48x-Qg-2oz">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qKS-YJ-HZP">
-                                <rect key="frame" x="0.0" y="44" width="414" height="794"/>
+                                <rect key="frame" x="0.0" y="56" width="414" height="660"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SavedItemTableViewCellIdentifier" rowHeight="178" id="66t-Na-JPc" customClass="SavedItemTableViewCell" customModule="MobileConsent" customModuleProvider="target">
@@ -155,19 +109,19 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8D-eY-ktD">
-                                                    <rect key="frame" x="20" y="34" width="374" height="17"/>
+                                                    <rect key="frame" x="20" y="34" width="374" height="16.666666666666671"/>
                                                     <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Consent Given" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wA-yS-70O">
-                                                    <rect key="frame" x="20" y="61" width="374" height="14"/>
+                                                    <rect key="frame" x="20" y="60.666666666666657" width="374" height="14"/>
                                                     <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="12"/>
                                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55D-fT-GNz">
-                                                    <rect key="frame" x="20" y="80" width="374" height="17"/>
+                                                    <rect key="frame" x="20" y="79.666666666666671" width="374" height="16.666666666666671"/>
                                                     <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -233,6 +187,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="k4K-JY-aCE" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nlU-fy-3e6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.34901960780000002" green="0.37647058820000001" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -255,6 +210,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="veo-jx-I8f" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LvH-3j-4IT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -268,7 +224,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bubble.middle.bottom" catalog="system" width="32" height="32"/>
+        <image name="bubble.middle.bottom" catalog="system" width="128" height="110"/>
         <image name="cookie" width="436" height="60"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
